--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/lib.mjs",
   "typings": "dist/lib.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "tsc",
     "prepublish": "pnpm build"
   },
   "keywords": [],
@@ -15,9 +15,6 @@
   "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "esbuild": "^0.25.5",
-    "rollup": "^4.43.0",
-    "rollup-plugin-dts": "^6.2.1",
-    "rollup-plugin-esbuild": "^6.2.1",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
